--- a/src/pages/apps/componets/body.module.css
+++ b/src/pages/apps/componets/body.module.css
@@ -1,9 +1,5 @@
 .body_overlay {
-    background-color: var(--surface2);
-    background-image: linear-gradient(180deg,
-            var(--surface5) 34vw,
-            var(--surface1) 34vw);
-    background-attachment: fixed;
+    background-color: var(--surface1);
     padding-top: 4.4rem;
 }
 
@@ -11,29 +7,46 @@
     padding: 2%;
     max-width: 1280px;
     margin: 0 auto 0 auto;
-    background-image: url(./assets/web_illustration-1280x560.png);
-    background-size: contain;
-    background-position: top right;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
 }
 
 .container {
-    width: 520px;
+    width: 800px;
     padding: 2.4rem;
-    margin-top: 2rem;
     border: 1px solid var(--border1);
-    border-radius: 1.2rem;
-    background: hsla(var(--surface4-hsl), 0.9);
-    box-shadow: inset 0 1px 1px #ddd, 0 2px 3px #ccc;
-    margin-bottom: 400px;
+    border-radius: 0.5rem;
+    display: flex;
     animation: fadeAndMove 0.6s ease 10ms;
+    margin-top: 2rem;
+    margin-bottom: 400px;
+}
+
+.st_image {
+    width: 400px;
+}
+
+.st_content {}
+
+.apps_heading {
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    border-bottom: solid 1px var(--border2);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.apps_heading h1 {
+    color: var(--text2);
+}
+
+.apps_heading p {
+    margin: 0;
 }
 
 .container h1 {
     margin: 0;
     font-weight: 600;
-    color: var(--text1);
+    /* color: var(--text1); */
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -41,10 +54,6 @@
 
 .container p {
     color: var(--text2);
-    letter-spacing: 0.1rem;
-    padding-bottom: 2.6rem;
-    margin-bottom: 1.8rem;
-    border-bottom: 1px solid var(--border2);
 }
 
 .container ul {
@@ -73,24 +82,9 @@
     }
 }
 
-@media screen and (min-width: 1280px) {
-    .body_overlay {
-        background-image: linear-gradient(180deg,
-                var(--surface5) 446px,
-                var(--surface1) 446px);
-    }
+@media screen and (min-width: 1280px) {}
 
-    .body {
-        background-size: 1280px 560px;
-        background-position: top;
-    }
-}
-
-@media screen and (max-width: 840px) {
-    .body {
-        background-image: url(./assets/web_illustration-840x480.png);
-    }
-}
+@media screen and (max-width: 840px) {}
 
 @media screen and (max-width: 620px) {
     .container {
