--- a/src/components/ContModal.module.css
+++ b/src/components/ContModal.module.css
@@ -1,39 +1,9 @@
-.modal_overlay {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: hsla(var(--surface2-values), 0.6);
-    opacity: 0;
-    z-index: 2;
-    visibility: hidden;
-    transform: scale(0.9);
-    transition: visibility 0s linear 0.2s,
-        opacity 0.2s ease,
-        transform 0.2s ease;
-}
-
-.modal_open {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1.0);
-    transition: visibility 0s linear,
-        opacity 0.3s ease,
-        transform 0.3s ease;
-}
-
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.cont_modal {
     width: 350px;
     padding: 1.8rem;
     border-radius: 0.8rem;
     background: var(--surface5);
     box-shadow: 0px 0px 30px 0px #ddd;
-    z-index: 10;
 }
 
 .closingicon {
@@ -43,7 +13,7 @@
     cursor: pointer;
 }
 
-.modal h1 {
+.cont h1 {
     margin: 1rem 0;
 }
 
