--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -5,9 +5,7 @@
     background-color: var(--surface1);
     display: flex;
     flex-direction: row;
-    gap: 1.2rem;
-    -webkit-user-select: none;
-    user-select: none;
+    gap: 0.8rem;
 }
 
 .footer ul {
@@ -20,10 +18,12 @@
 
 .footer a {
     color: inherit;
+    text-decoration: none;
 }
 
 .footer a:hover {
     color: var(--link);
+    text-decoration: underline;
 }
 
 .footer a:active {
